--- a/trunk/EulerMath/ProjectEulerProblems/ProjectEulerProblems.csproj
+++ b/trunk/EulerMath/ProjectEulerProblems/ProjectEulerProblems.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="001.cs" />
     <Compile Include="002.cs" />
+    <Compile Include="003.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
