--- a/trunk/EulerMath/ProjectEulerProblems/ProjectEulerProblems.csproj
+++ b/trunk/EulerMath/ProjectEulerProblems/ProjectEulerProblems.csproj
@@ -49,6 +49,7 @@
     <Compile Include="001.cs" />
     <Compile Include="002.cs" />
     <Compile Include="003.cs" />
+    <Compile Include="230.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
