--- a/trunk/EulerMath/EulerMath.test/EulerMath.Test.csproj
+++ b/trunk/EulerMath/EulerMath.test/EulerMath.Test.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Integer\Sequence\PrimeNumberTest.cs" />
     <Compile Include="Integer\Sequence\FibonacciNumberTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RationalTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EulerMath\EulerMath.csproj">
