--- a/trunk/EulerMath/ProjectEulerProblems/ProjectEulerProblems.csproj
+++ b/trunk/EulerMath/ProjectEulerProblems/ProjectEulerProblems.csproj
@@ -50,6 +50,7 @@
     <Compile Include="002.cs" />
     <Compile Include="003.cs" />
     <Compile Include="230.cs" />
+    <Compile Include="198.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
