Add LGPL text to each file. Add LGPL License. Made all classes fully StyleCop compliant. Fulfilled almost all FxCop suggestions. Started problem 198 solution. Added Rational class for rational numbers.

--- a/EulerMath/ProjectEulerProblems/ProjectEulerProblems.csproj
+++ b/EulerMath/ProjectEulerProblems/ProjectEulerProblems.csproj
@@ -50,6 +50,7 @@
     <Compile Include="002.cs" />
     <Compile Include="003.cs" />
     <Compile Include="230.cs" />
+    <Compile Include="198.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
