--- a/EulerMath/EulerMath/EulerMath.csproj
+++ b/EulerMath/EulerMath/EulerMath.csproj
@@ -46,13 +46,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constant.cs" />
-    <Compile Include="Integer\Sequence\PrimeNumber.cs" />
-    <Compile Include="Integer\Sequence\FibonacciNumber.cs" />
-    <Compile Include="Integer\Sequence\ISequence.cs" />
+    <Compile Include="Rational.cs" />
+    <Compile Include="Integers\Sequence\PrimeNumber.cs" />
+    <Compile Include="Integers\Sequence\FibonacciNumber.cs" />
+    <Compile Include="Integers\Sequence\ISequence.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(ProgramFiles)\MSBuild\Microsoft\StyleCop\v4.3\Microsoft.StyleCop.targets" />  
+  <Import Project="$(ProgramFiles)\MSBuild\Microsoft\StyleCop\v4.3\Microsoft.StyleCop.targets" />
   <PropertyGroup Condition="'$(Configuration)' == 'Release' ">
     <PostBuildEvent>"%25ProgramFiles%25\Microsoft FxCop\FxCopCmd.exe" /file:"$(TargetPath)" /console /searchgac</PostBuildEvent>
   </PropertyGroup>
