--- a/EulerMath/ProjectEulerProblems/ProjectEulerProblems.csproj
+++ b/EulerMath/ProjectEulerProblems/ProjectEulerProblems.csproj
@@ -32,6 +32,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Oyster.IntX, Version=0.9.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Oyster.IntX.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -50,7 +54,9 @@
     <Compile Include="002.cs" />
     <Compile Include="003.cs" />
     <Compile Include="230.cs" />
-    <Compile Include="198.cs" />
+    <Compile Include="016.cs" />
+    <Compile Include="010.cs" />
+    <Compile Include="015.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
